--- a/style.css
+++ b/style.css
@@ -1,52 +1,49 @@
 *{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-sizing: border-box;
-    margin: 0;
     color: black;
+    background-color: #FFA500;
 }
 
 .body {
     min-height: 100vh;
 }
 
-.contentTotal {
-    gap: 2px;
-    padding: 2px;
+.headerLogo {
+    width: 200px;
+    padding: 25px;
     display: flex;
-    flex-direction: row;
-    background-color: red; /*content_wrapper*/
 }
 
-.contentRestaurant {
-    width: calc(100% - 308px);
-    padding: 16px;
-    border: 5px solid blue; /*content*/
-}
-
-/*.test_content {
-    padding: 32px;
-    font-size: 48px;
-    height: 1500px;
-    width: 100%;
-    background-color: yellow;
-}*/
-
-.basketStickyrail {
-    width: 300px;
-    flex-grow: 1;
-    border: 5px solid green;
-    padding: 16px; /*basket_wrapper*/
-}
-
-.basket {
-    width: 100%;
-    height: 400px;
+.contentTotal {
     background-color: white;
-    position: sticky;
-    top: 0; /*basket*/
+    color: black;
 }
 
 .contentRestaurantTitelbox {
-    padding-left: 16px;
-    color: black;
+    padding-left: 25px;
+    background-color: white;
+}
+
+.contentRestaurantImage {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.restaurantRating {
+    color: #FFA500;
+    background-color: white;
+}
+
+h1 {
+    background-color: white;
+}
+
+.contentRestaurantCategory {
+    display: flex
+    ;
+        flex-direction: column;
+        background-color: #ffffff;
+        border-radius: 5px;
+        width: 350px;
 }
