--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 .contentRestaurantImage {
     width: 100%;
-    height: 250px;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -65,14 +65,18 @@ h1 {
 
 .contentCategoryPizzaImg, .contentCategoryPastaImg {
     width: 100%;
-    height: 100px;
+    height: 150px;
     object-fit: cover;
     padding: 5px;
     border-radius: 10px;
 }
 
-h2 ,p {
+h2 {
     padding: 10px 10px 10px 20px;
+}
+
+p {
+    padding: 0px 10px 5px 20px; 
 }
 
 .dish-item {
