--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h1 {
     width: 100%;
 }
 
-.contentCategoryPizzaImg, .contentCategoryPastaImg {
+.contentCategoryPizzaImg, .contentCategoryPastaImg, .contentCategoryDessertImg {
     width: 100%;
     height: 150px;
     object-fit: cover;
