--- a/idea/style01.css
+++ b/idea/style01.css
@@ -1,4 +1,4 @@
-*{
+* {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
 }
@@ -6,6 +6,22 @@
 body {
     background-color: #FFA500;
     min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.container { 
+    width: 100%; 
+    max-width: 1920px; /* Maximale Breite setzen */ 
+    background-color: #FFFFFF; 
+    margin: 0 auto;
+}
+
+.header, .footer {
+    background-color: #FFA500;
+    width: 100%;
 }
 
 .headerLogo {
@@ -18,23 +34,10 @@ body {
     padding: 20px;
 }
 
-.image-wrapper {
-    position: relative;
-}
-
 .contentRestaurantImage {
     width: 100%;
     height: 300px;
     object-fit: cover;
-}
-
-.companyIcon {
-    position: absolute;
-    bottom: -35px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100px;
-    height: 100px;
 }
 
 .restaurantRating {
@@ -51,7 +54,7 @@ h1 {
     background-color: #E5E4E2; 
     padding: 5px 10px 5px 10px;
     width: 100%;
-} 
+}
 
 .nav-link { 
     text-decoration: none; 
@@ -96,7 +99,7 @@ p {
     width: 100%;
     border-width: 1px;
     border: solid;
-    border-color: #E5E4E2; ;
+    border-color: #E5E4E2;
     border-radius: 5px;
     margin-bottom: 5px;
 }
