--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,7 +1,6 @@
 .contentTotal {
     display: flex; /*content_wrapper*/
     flex-direction: row;
-    background-color: black; 
 }
 
 .contentRestaurant {
@@ -18,7 +17,7 @@
 }*/
 
 .basketStickyrail {
-    width: 300px; /*basket_wrapper*/
+    width: 500px; /*basket_wrapper*/
     flex-grow: 1;
     border-width: 2px;
     border-style: solid;
@@ -26,8 +25,8 @@
 }
 
 .basket {
-    width: 100%; /*basket*/
-    height: 500px;
+    width: 100%;
+    height: 650px;
     background-color: white;
     position: sticky;
     top: 0;
@@ -38,8 +37,66 @@
     box-sizing: border-box;
 }
 
+.basket-items {
+    flex-grow: 1;
+    overflow-y: auto; /* Vertikales Scrollen ermöglichen */
+}
+
 .basket-item {
-    width: 100%;
-    padding: 5px;
+    display: flex;
+    align-items: center; /* Zentriere die Elemente vertikal */
+    padding: 10px;
     border-bottom: 1px solid #E5E4E2;
+}
+
+.basket-item p {
+    margin: 5px 0; /* Abstände zwischen den Texten */
+    flex-grow: 1; /* Verteilt den Platz gleichmäßig */
+}
+
+.basket-item button {
+    background-color: #FFA500;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0 5px; /* Abstand zwischen den Buttons */
+}
+
+.basket-item button:hover {
+    background-color: #ff7f00;
+}
+
+.basket-footer {
+    position: sticky;
+    bottom: 0;
+    background-color: white;
+    padding: 10px 0;
+    border-top: 2px solid #E5E4E2;
+}
+
+.total-price {
+    padding: 10px;
+}
+
+.placeOrderButton {
+    background-color: #FFA500;
+    color: white;
+    border: none;
+    padding: 10px 20px 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.placeOrderButton:hover {
+    background-color: #ff7f00;
+}
+
+.order-message {
+    margin-top: 20px;
+    font-size: 16px;
+    color: green;
 }
