--- a/style.css
+++ b/style.css
@@ -18,6 +18,16 @@ body {
     position: relative;
 }
 
+.contentTotal {
+    display: flex; /*content_wrapper*/
+    flex-direction: row;
+}
+
+.contentRestaurant {
+    width: calc(100% - 308px); /*content*/
+    background-color: white;
+}
+
 .contentRestaurantImage {
     width: 100%;
     height: 300px;
