--- a/styles/basket.css
+++ b/styles/basket.css
@@ -8,14 +8,6 @@
     background-color: white;
 }
 
-/*.test_content {
-    padding: 32px;
-    font-size: 48px;
-    height: 1500px;
-    width: 100%;
-    background-color: yellow;
-}*/
-
 .basketStickyrail {
     width: 500px; /*basket_wrapper*/
     flex-grow: 1;
@@ -35,18 +27,22 @@
     flex-direction: column;
     padding: 25px;
     box-sizing: border-box;
+    border-width: 1px;
+    border: solid;
+    border-radius: 5px;
+    border-color: grey;
 }
 
 .basket-items {
     flex-grow: 1;
-    overflow-y: auto; /* Vertikales Scrollen ermöglichen */
+  overflow-y: auto; /* Vertikales Scrollen ermöglichen */
 }
 
 .basket-item {
     display: flex;
     align-items: center; /* Zentriere die Elemente vertikal */
     padding: 10px;
-    border-bottom: 1px solid #E5E4E2;
+    border-bottom: 1px solid #e5e4e2;
 }
 
 .basket-item p {
@@ -55,7 +51,7 @@
 }
 
 .basket-item button {
-    background-color: #FFA500;
+    background-color: #ffa500;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -73,7 +69,7 @@
     bottom: 0;
     background-color: white;
     padding: 10px 0;
-    border-top: 2px solid #E5E4E2;
+    border-top: 2px solid #e5e4e2;
 }
 
 .total-price {
@@ -81,7 +77,7 @@
 }
 
 .placeOrderButton {
-    background-color: #FFA500;
+    background-color: #ffa500;
     color: white;
     border: none;
     padding: 10px 20px 10px 20px;
