--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@ body {
     min-height: 100vh;
 }
 
-.headerLogo {
-    width: 200px;
+.header {
+    height: 120px;
     padding: 20px;
     display: flex;
+}
+
+
+.headerLogo {
+    width: 200px;
 }
 
 .image-wrapper {
@@ -24,7 +29,7 @@ body {
 }
 
 .contentRestaurant {
-    width: calc(100% - 308px); /*content*/
+    width: calc(100% - 358px); /*content*/
     background-color: white;
 }
 
@@ -43,14 +48,17 @@ body {
     height: 100px;
 }
 
+.contentRestaurantTitelbox {
+    padding: 20px;
+};
+
 .restaurantRating {
     color: #FFA500;
-    padding: 0px 0px 20px 20px;
 }
 
-h1 {
+/*h1 {
     padding: 20px 0px 10px 20px;
-}
+}*/
 
 .contentRestaurantNavbar {
     display: flex;
@@ -90,22 +98,23 @@ h1 {
     border-radius: 10px;
 }
 
-h2 {
+/*h2 {
     padding: 10px 10px 10px 20px;
-}
+}*/
 
-p {
+/*p {
     padding: 0px 10px 5px 20px;
-}
+}*/
 
 .dish-item {
     object-fit: cover;
-    width: 100%;
+    width: calc(100% - 10px);
     border-width: 1px;
     border: solid;
     border-color: #E5E4E2;
     border-radius: 5px;
-    margin-bottom: 5px;
+    margin: 5px;
+    padding: 20px;
 }
 
 .hidden {
@@ -142,14 +151,18 @@ p {
 }
 
 .footer {
+/*    position: fixed;
+    bottom: 0;
+    left: 0;*/
+    width: 100%;
+    height: 120px;
     background-color: #FFA500;
-    padding: 20px 0;
+    padding: 20px;
 }
 
 .footer-bottom {
     text-align: center;
     padding: 10px 0;
     border-top: 1px solid #444;
-    margin-top: 20px;
 }
 
