--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,5 +1,5 @@
 .basketStickyrail {
-    width: 350px; /*basket_wrapper*/
+    width: 400px; /*basket_wrapper*/
     flex-grow: 1;
     border-width: 2px;
     border-style: solid;
@@ -17,21 +17,36 @@
     flex-direction: column;
     padding: 25px;
     box-sizing: border-box;
+    overflow-y: auto;
 }
 
-.basket-item {
+.basketItem {
     display: flex;
-    align-items: center;
-    padding: 10px;
+    flex-direction: column;
+    padding: 10px 0px;
     border-bottom: 1px solid #E5E4E2;
 }
 
-.basket-item p {
+.basketItemName {
+    margin-bottom: 10px; /* Fügt einen Abstand zwischen dem Namen und den Steuerelementen hinzu */
+}
+
+.basketItemControls {
+    display: flex;
+    align-items: center; /* Zentriert die Elemente vertikal */
+    gap: 10px; /* Abstand zwischen den Elementen */
+}
+
+.basketItemControls button, .basketItemControls p { 
+    margin: 0; 
+}
+
+.basketItem p {
     margin: 5px 0;
     flex-grow: 1;
 }
 
-.basket-item button {
+.basketItem button {
     background-color: #FFA500;
     color: white;
     border: none;
@@ -41,11 +56,11 @@
     margin: 0 5px;
 }
 
-.basket-item button:hover {
+.basketItem button:hover {
     background-color: #ff7f00;
 }
 
-.total-price {
+.totalPrice {
     border-top: 2px solid #E5E4E2;
     margin-top: 10px;
 }
@@ -64,7 +79,7 @@
     background-color: #ff7f00;
 }
 
-.order-message {
+.orderMessage {
     margin-top: 20px;
     font-size: 16px;
     color: green;
@@ -74,13 +89,13 @@
 .mobileBasketButton {
     display: none; /* Standardmäßig ausblenden */
     position: fixed;
-    bottom: 10px;
+    bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #FFA500;
+    background-color:blue;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 20px 40px;
     border-radius: 4px;
     cursor: pointer;
     z-index: 1000;
@@ -94,7 +109,7 @@
 .basketResponsive {
     display: none; /* Standardmäßig ausblenden */
     position: fixed;
-    bottom: 0;
+    bottom: 20px;
     left: 0;
     right: 0;
     background-color: white;
