--- a/style.css
+++ b/style.css
@@ -28,8 +28,12 @@ body {
     flex-direction: row;
 }
 
+h1 {
+    font-size: 32px;
+}
+
 .contentRestaurant {
-    width: calc(100% - 408px); /*content*/
+    width: 100%; /*content*/
     background-color: white;
 }
 
@@ -50,7 +54,7 @@ body {
 
 .contentRestaurantTitelbox {
     padding: 20px;
-};
+}
 
 .restaurantRating {
     color: #FFA500;
@@ -60,7 +64,7 @@ body {
     display: flex;
     gap: 20px;
     background-color: #E5E4E2;
-    padding: 5px 10px 5px 10px;
+    padding: 10px 20px;
     width: 100%;
 }
 
@@ -98,9 +102,9 @@ body {
     padding: 10px 10px 10px 20px;
 }*/
 
-/*p {
-    padding: 0px 10px 5px 20px;
-}*/
+p {
+    padding: 5px 0px;
+}
 
 .dishItem {
     object-fit: cover;
@@ -147,9 +151,6 @@ body {
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
     width: 100%;
     height: 120px;
     background-color: #FFA500;
@@ -162,3 +163,31 @@ body {
     border-top: 1px solid #444;
 }
 
+@media (max-width: 820px) {
+    .contentRestaurant {
+        width: 100%;
+        background-color: white;
+    }
+}
+
+@media (max-width: 520px) {
+    .companyIcon {
+        position: absolute;
+        bottom: -25px;
+        left: 80%;
+        transform: translateX(-50%);
+        width: 80px;
+        height: 80px;
+    }
+
+    .header {
+        display: flex;
+        justify-content: center;
+    }
+
+    .contentRestaurantImage {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+}
