--- a/styles/basket.css
+++ b/styles/basket.css
@@ -95,8 +95,8 @@
     background-color:blue;
     color: white;
     border: none;
-    padding: 20px 40px;
-    border-radius: 4px;
+    padding: 20px 60px;
+    border-radius: 5px;
     cursor: pointer;
     z-index: 1000;
 }
@@ -105,37 +105,8 @@
     background-color: #ff7f00;
 }
 
-/* Basket Dialog for Mobile */
-.basketResponsive {
-    display: none; /* Standardmäßig ausblenden */
-    position: fixed;
-    bottom: 20px;
-    left: 0;
-    right: 0;
-    background-color: white;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    max-height: 80vh;
-    overflow-y: auto;
-    border-top: 1px solid #E5E4E2;
-    padding: 20px;
-}
-
-.basketResponsiveOpen {
-    display: block;
-}
-
-@media (max-width: 800px) {
-    body {
-        overflow-x: hidden; /* Deaktiviert den horizontalen Scrollbalken */
-    }
-
-    .contentRestaurant {
-        width: 100%;
-        background-color: white;
-    }
-
-    .basket {
+@media (max-width: 820px) {
+    .basketStickyrail {
         display: none; /* Verbirgt den Desktop-Warenkorb */
     }
 
