--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,5 +1,5 @@
 .basketStickyrail {
-    width: 400px; /*basket_wrapper*/
+    width: 500px; /*basket_wrapper*/
     flex-grow: 1;
     border-width: 2px;
     border-style: solid;
@@ -89,13 +89,14 @@
 .mobileBasketButton {
     display: none; /* Standardmäßig ausblenden */
     position: fixed;
-    bottom: 50px;
+    bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
     background-color:blue;
     color: white;
     border: none;
-    padding: 20px 60px;
+    padding: 15px 50px;
+    font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
     z-index: 1000;
@@ -105,12 +106,17 @@
     background-color: #ff7f00;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 920px) {
     .basketStickyrail {
         display: none; /* Verbirgt den Desktop-Warenkorb */
     }
 
     .mobileBasketButton {
         display: block; /* Zeigt den mobilen Warenkorb-Button */
+    }
+
+    .basketItemControls button {
+        padding: 8px 14px; /* Größere Klickfläche */
+        font-size: 14px; /* Etwas größere Schrift */
     }
 }
