--- a/style.css
+++ b/style.css
@@ -14,17 +14,16 @@ body {
     display: flex;
 }
 
-
-.headerLogo {
+.header-logo {
     width: 200px;
 }
 
-.imageWrapper {
+.image-wrapper {
     position: relative;
 }
 
-.contentTotal {
-    display: flex; /*content_wrapper*/
+.content-total {
+    display: flex; /*content-wrapper*/
     flex-direction: row;
 }
 
@@ -32,18 +31,18 @@ h1 {
     font-size: 32px;
 }
 
-.contentRestaurant {
+.content-restaurant {
     width: 100%; /*content*/
     background-color: white;
 }
 
-.contentRestaurantImage {
+.content-restaurant-image {
     width: 100%;
     height: 300px;
     object-fit: cover;
 }
 
-.companyIcon {
+.company-icon {
     position: absolute;
     bottom: -35px;
     left: 50%;
@@ -52,15 +51,15 @@ h1 {
     height: 100px;
 }
 
-.contentRestaurantTitelbox {
+.content-restaurant-title-box { /* geändert: titelbox -> title-box */
     padding: 20px;
 }
 
-.restaurantRating {
+.restaurant-rating {
     color: #FFA500;
 }
 
-.contentRestaurantNavbar {
+.content-restaurant-nav-bar { /* geändert: navbar -> nav-bar */
     display: flex;
     gap: 20px;
     background-color: #E5E4E2;
@@ -68,7 +67,7 @@ h1 {
     width: 100%;
 }
 
-.navLink {
+.nav-link {
     text-decoration: none;
     font-size: 16px;
     font-weight: bold;
@@ -77,12 +76,12 @@ h1 {
     transition: background-color 0.3s ease;
 }
 
-.navLink:hover {
+.nav-link:hover {
     background-color: white;
     color: #FFA500;
 }
 
-.contentRestaurantCategory {
+.content-restaurant-category {
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
@@ -90,7 +89,9 @@ h1 {
     width: 100%;
 }
 
-.contentCategoryPizzaImg, .contentCategoryPastaImg, .contentCategoryDessertImg {
+.content-category-pizza-img, /* geändert: content-categoryPizzaImg */
+.content-category-pasta-img, /* geändert: content-categoryPastaImg */
+.content-category-desserts-img { /* geändert: content-categoryDessertImg */
     width: 100%;
     height: 150px;
     object-fit: cover;
@@ -98,15 +99,11 @@ h1 {
     border-radius: 10px;
 }
 
-/*h2 {
-    padding: 10px 10px 10px 20px;
-}*/
-
 p {
     padding: 5px 0px;
 }
 
-.dishItem {
+.dish-item {
     object-fit: cover;
     width: calc(100% - 10px);
     border-width: 1px;
@@ -121,18 +118,18 @@ p {
     display: none;
 }
 
-.dishHeader {
+.dish-header {
     display: flex;
     justify-content: space-between; /* Platz zwischen Titel und Button aufteilen */
     align-items: center;
     margin-bottom: 10px;
 }
 
-.dishHeader h2 {
+.dish-header h2 {
     margin: 0; /* Kein Abstand, damit es gut aussieht */
 }
 
-.addToBasketButton {
+.add-to-basket-button {
     background-color: #FFA500;
     color: white;
     border: none;
@@ -142,11 +139,11 @@ p {
     cursor: pointer;
 }
 
-.addToBasketButton:hover {
+.add-to-basket-button:hover {
     background-color: #ff7f00;
 }
 
-.dishItem p {
+.dish-item p {
     margin: 0 0 10px 0; /* Abstände zwischen den Texten */
 }
 
@@ -157,29 +154,21 @@ p {
     padding: 20px;
 }
 
-.footerBottom {
+.footer-bottom {
     text-align: center;
     padding: 10px 0;
     border-top: 1px solid #444;
 }
 
-.hidden {
-    display: none;
-}
-
 @media (max-width: 920px) {
-    .contentRestaurant {
+    .content-restaurant {
         width: 100%;
         background-color: white;
     }
 }
 
-
-
-
-
 @media (max-width: 620px) {
-    .companyIcon {
+    .company-icon {
         position: absolute;
         bottom: -25px;
         left: 80%;
@@ -193,7 +182,7 @@ p {
         justify-content: center;
     }
 
-    .contentRestaurantImage {
+    .content-restaurant-image {
         width: 100%;
         height: 200px;
         object-fit: cover;
